--- a/pkg-init.yaml
+++ b/pkg-init.yaml
@@ -6,7 +6,7 @@ languages:
   c++: default
 templates:
   default: default
-  test: test.yaml
+  test: ./test.yaml
 default:
   type: raw
   commands: |
