--- a/pkg-init.yaml
+++ b/pkg-init.yaml
@@ -1,12 +1,12 @@
 
-
-data-dir: /usr/share/pkg-int/etc
+# can be ommitted and will default to UserCacheDir || ~/.cache/pkg-init
+data-dir: ~/.cache/pkg-init
 languages:
   c: default
   c++: default
 templates:
   default: default
-  test: ./test.yaml
+  working: ./test/working.yaml
 default:
   type: raw
   commands: |
